--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "author": "Nevio Costa Magagnin",
+  "repository": "https://github.com/NEVI0/react-native-ui-prototype",
+  "version": "1.0.0",
+  "private": false,
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -37,6 +41,5 @@
     "@types/react-native": "~0.63.2",
     "@types/styled-components": "^5.1.11",
     "typescript": "~4.0.0"
-  },
-  "private": true
+  }
 }
